--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
   <title>Need For Speed: Most Wanted (2012) - Cars</title>
 </head>
 <body>
+  <div class="container">
+    <h1>Car List</h1>
+    <table id="carTable">
+      <thead>
+        <tr>
+          <th>Make & Model</th>
+        </tr>
+      </thead>
+      <tbody>
+
+      </tbody>
+    </table>
+  </div>
   
   <script src="js/cars.js"></script>
   <script src="js/main.js"></script>
