Change structure of cars variable and update car list

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
       <thead>
         <tr>
           <th>Make & Model</th>
+          <th>Class</th>
+          <th>Game</th>
+          <th>A</th>
+          <th>TS</th>
+          <th>C</th>
+          <th>W</th>
+          <th>OR</th>
+          <th>T</th>
         </tr>
       </thead>
       <tbody>
