--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <div class="container">
     <h1>Car List</h1>
     <br>
+    <button id="test" class="btn btn-primary">Test button (get base game cars)</button>
+    <br>
+    <br>
     <table id="carsTable" class="table table-striped table-bordered">
       <thead>
         <tr>
