Add query object creation functionality

--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
           <div class="card-header">Filter by Game</div>
           <div class="card-body">
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="stock" id="baseGame">
+              <input class="form-check-input" type="checkbox" value="stock" data-key="game" id="baseGame">
               <label class="form-check-label" for="baseGame">Base Game</label>
             </div>         
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="terminal" id="terminal">
+              <input class="form-check-input" type="checkbox" value="terminal" data-key="game" id="terminal">
               <label class="form-check-label" for="terminal">Terminal Velocity</label>                   
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="hero" id="hero">
+              <input class="form-check-input" type="checkbox" value="hero" data-key="game" id="hero">
               <label class="form-check-label" for="hero">NFS Heroes</label>                   
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="movie" id="movie">
+              <input class="form-check-input" type="checkbox" value="movie" data-key="game" id="movie">
               <label class="form-check-label" for="movie">Movie Legends</label>                   
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="speed" id="speed">
+              <input class="form-check-input" type="checkbox" value="speed" data-key="game" id="speed">
               <label class="form-check-label" for="speed">Ultimate Speed</label>                   
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="multi" id="multi">
+              <input class="form-check-input" type="checkbox" value="multi" data-key="game" id="multi">
               <label class="form-check-label" for="multi">Multiplayer Only</label>                   
             </div>
           </div>
@@ -74,31 +74,31 @@
           <div class="card-header">Filter by Class</div>
           <div class="card-body">
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="Exotic" id="exotic">
+              <input class="form-check-input" type="checkbox" value="Exotic" data-key="class" id="exotic">
               <label class="form-check-label" for="exotic">Exotic</label>
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="sports" id="sports">
+              <input class="form-check-input" type="checkbox" value="sports" data-key="class" id="sports">
               <label class="form-check-label" for="sports">Sports</label>
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="Race" id="race">
+              <input class="form-check-input" type="checkbox" value="Race" data-key="class" id="race">
               <label class="form-check-label" for="race">Race</label>
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="Grand Tourer" id="grandTourer">
+              <input class="form-check-input" type="checkbox" value="Grand Tourer" data-key="class" id="grandTourer">
               <label class="form-check-label" for="grandTourer">Grand Tourer</label>
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="Muscle" id="muscle">
+              <input class="form-check-input" type="checkbox" value="Muscle" data-key="class" id="muscle">
               <label class="form-check-label" for="muscle">Muscle</label>
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="Everyday" id="everyday">
+              <input class="form-check-input" type="checkbox" value="Everyday" data-key="class" id="everyday">
               <label class="form-check-label" for="everyday">Everyday</label>
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="SUV" id="suv">
+              <input class="form-check-input" type="checkbox" value="SUV" data-key="class" id="suv">
               <label class="form-check-label" for="suv">SUV</label>
             </div>
           </div>
