--- a/index.html
+++ b/index.html
@@ -40,30 +40,36 @@
     <div class="row top-buffer">      
       <div class="col-sm-6">        
         <div class="card">
-          <div class="card-header">Filter by Game</div>
+          <div class="card-header">
+            <span>Game</span>
+            <span class="float-right">
+              <button class="btn btn-primary btn-sm btn-inline check-all">Check All</button>
+              <button class="btn btn-secondary btn-sm btn-inline clear-all">Clear All</button>
+            </span>
+          </div>
           <div class="card-body">
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="stock" data-key="game" id="baseGame">
+              <input class="form-check-input" type="checkbox" value="stock" data-key="game" id="baseGame" checked>
               <label class="form-check-label" for="baseGame">Base Game</label>
             </div>         
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="terminal" data-key="game" id="terminal">
+              <input class="form-check-input" type="checkbox" value="terminal" data-key="game" id="terminal" checked>
               <label class="form-check-label" for="terminal">Terminal Velocity</label>                   
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="hero" data-key="game" id="hero">
+              <input class="form-check-input" type="checkbox" value="hero" data-key="game" id="hero" checked>
               <label class="form-check-label" for="hero">NFS Heroes</label>                   
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="movie" data-key="game" id="movie">
+              <input class="form-check-input" type="checkbox" value="movie" data-key="game" id="movie" checked>
               <label class="form-check-label" for="movie">Movie Legends</label>                   
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="speed" data-key="game" id="speed">
+              <input class="form-check-input" type="checkbox" value="speed" data-key="game" id="speed" checked>
               <label class="form-check-label" for="speed">Ultimate Speed</label>                   
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="multi" data-key="game" id="multi">
+              <input class="form-check-input" type="checkbox" value="multi" data-key="game" id="multi" checked>
               <label class="form-check-label" for="multi">Multiplayer Only</label>                   
             </div>
           </div>
@@ -71,39 +77,51 @@
       </div>
       <div class="col-sm-6">        
         <div class="card">
-          <div class="card-header">Filter by Class</div>
+          <div class="card-header">
+            <span>Class</span>
+            <span class="float-right">
+              <button class="btn btn-primary btn-sm btn-inline check-all">Check All</button>
+              <button class="btn btn-secondary btn-sm btn-inline clear-all">Clear All</button>
+            </span>
+          </div>
           <div class="card-body">
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="Exotic" data-key="class" id="exotic">
+              <input class="form-check-input" type="checkbox" value="Exotic" data-key="class" id="exotic" checked>
               <label class="form-check-label" for="exotic">Exotic</label>
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="sports" data-key="class" id="sports">
+              <input class="form-check-input" type="checkbox" value="Sports" data-key="class" id="sports" checked>
               <label class="form-check-label" for="sports">Sports</label>
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="Race" data-key="class" id="race">
+              <input class="form-check-input" type="checkbox" value="Race" data-key="class" id="race" checked>
               <label class="form-check-label" for="race">Race</label>
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="Grand Tourer" data-key="class" id="grandTourer">
+              <input class="form-check-input" type="checkbox" value="Grand Tourer" data-key="class" id="grandTourer" checked>
               <label class="form-check-label" for="grandTourer">Grand Tourer</label>
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="Muscle" data-key="class" id="muscle">
+              <input class="form-check-input" type="checkbox" value="Muscle" data-key="class" id="muscle" checked>
               <label class="form-check-label" for="muscle">Muscle</label>
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="Everyday" data-key="class" id="everyday">
+              <input class="form-check-input" type="checkbox" value="Everyday" data-key="class" id="everyday" checked>
               <label class="form-check-label" for="everyday">Everyday</label>
             </div>
             <div class="form-check filter-checkbox">
-              <input class="form-check-input" type="checkbox" value="SUV" data-key="class" id="suv">
+              <input class="form-check-input" type="checkbox" value="SUV" data-key="class" id="suv" checked>
               <label class="form-check-label" for="suv">SUV</label>
             </div>
           </div>
         </div>        
       </div>      
+    </div>
+
+    <div class="row top-buffer">
+      <div class="col-sm-12">
+        <button id="filter" class="btn btn-secondary btn-block">Get filtered results</button>
+      </div>
     </div>
 
     <div class="row top-buffer">
@@ -125,11 +143,6 @@
           <tbody>
           </tbody>
         </table>
-      </div>
-    </div>
-    <div class="row top-buffer">
-      <div class="col-sm-12">
-        <button id="test" class="btn btn-primary">Test button (get base game cars)</button>
       </div>
     </div>
   </div>
