--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container">
-        <a class="navbar-brand" href="/">Need For Speed: Most Wanted (2012) - Cars</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand d-sm-none" href="/">NFS: Most Wanted</a>
+        <a class="navbar-brand d-none d-sm-block" href="/">Need For Speed: Most Wanted</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1" aria-controls="navbar1" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       
-        <div class="collapse navbar-collapse" id="navbarColor01">
+        <div class="collapse navbar-collapse" id="navbar1">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#">List <span class="sr-only">(current)</span></a>
@@ -129,15 +130,15 @@
         <table id="carsTable" class="table table-striped table-bordered">
           <thead>
             <tr>
-              <th>Make & Model</th>
-              <th>Class</th>
-              <th>Game</th>
-              <th>ACC</th>
-              <th>TOP</th>
-              <th>CON</th>
-              <th>WEI</th>
-              <th>OFF</th>
-              <th>TOU</th>
+              <th title="Vehicle Make and Model">Make & Model</th>
+              <th title="Vehicle Class">Class</th>
+              <th title="Game Type">Game</th>
+              <th title="Acceleration">ACC</th>
+              <th title="Top Speed">TOP</th>
+              <th title="Control">CON</th>
+              <th title="Weight">WEI</th>
+              <th title="Off-road">OFF</th>
+              <th title="Toughness">TOU</th>
             </tr>
           </thead>
           <tbody>
