Add meta description and keywords

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Need For Speed: Most Wanted (2012) cars list">
+  <meta name="keywords" content="Need For Speed Most Wanted 2012, cars, vehicles">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
