--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
       
-        <div class="collapse navbar-collapse" id="navbar1">
+        <!-- <div class="collapse navbar-collapse" id="navbar1">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#">List <span class="sr-only">(current)</span></a>
@@ -34,7 +34,7 @@
               <a class="nav-link" href="#">Grid</a>
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </nav>
   </header>  
